# src/main/java/com/pm/bs/product/controller/OrdersController.java
@@ -4,7 +4,6 @@ import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -14,6 +13,7 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
+import com.pm.bs.beans.OrderRequest;
 import com.pm.bs.beans.OrderWrapper;
 import com.pm.bs.order.service.OrderService;
 
@@ -47,8 +47,8 @@ public class OrdersController {
 	}
 	
 	@PutMapping("/orders/{itemId}")
-	public ResponseEntity<Void> updateOrderByprodcutId(@PathVariable("itemId") long itemId) {
-		orderService.updateOrder(itemId);
+	public ResponseEntity<Void> updateOrderByprodcutId(@RequestBody() OrderRequest order) {
+		orderService.updateOrder(order);
 		return ResponseEntity.ok().build();
 	}
 }
